# coyote

./: .gitignore  ARTIFACT.md  Dockerfile  PEAVS.py  PEAVS_LOOP.py  README.md  auto_vectorize.py  benchmarks.py  bicont.py  block_matmul.py  code_object.pkl  code_object_dot3.pkl  code_object_dot6.pkl  compile_times.txt  compile_to_bfv.py  count_ops.py  coyote_compile.py  examples.py  expressions.py  figures.py  fill_in_blanks.py  function_interleave.py  general_function.py  numberTreeGenerator.py  obj_function_compile_times.txt  ops.csv  pyproject.toml  runBenchmarks.py  runTreeBenchmarks.py  semantics.tex  setup.cfg  slp_playground.py
artifact_files/bfv_backend/: CMakeLists.txt  main.cpp
bfv_backend/: CMakeLists.txt  generateGraphs.py  generateTreeGraphs.py  main.cpp  run.py  runBinaries.py  util.cpp  util.hpp
bfv_backend/conv_4x2_fully/: scalar.cpp  vector.cpp
bfv_backend/conv_4x2_partially/: scalar.cpp  vector.cpp
bfv_backend/conv_4x2_un/: scalar.cpp  vector.cpp
bfv_backend/conv_5x3_fully/: scalar.cpp  vector.cpp
bfv_backend/conv_5x3_partially/: scalar.cpp  vector.cpp
bfv_backend/conv_5x3_un/: scalar.cpp  vector.cpp
bfv_backend/decision_tree/: scalar.cpp  vector.cpp
bfv_backend/decision_tree_packed_fully/: scalar.cpp  vector.cpp
bfv_backend/decision_tree_packed_partially/: scalar.cpp  vector.cpp
bfv_backend/decision_tree_packed_un/: scalar.cpp  vector.cpp
bfv_backend/distances_3x3_fully/: scalar.cpp  vector.cpp
bfv_backend/distances_3x3_partially/: scalar.cpp  vector.cpp
bfv_backend/distances_3x3_un/: scalar.cpp  vector.cpp
bfv_backend/distances_4x4_fully/: scalar.cpp  vector.cpp
bfv_backend/distances_4x4_partially/: scalar.cpp  vector.cpp
bfv_backend/distances_4x4_un/: scalar.cpp  vector.cpp
bfv_backend/distances_5x5_fully/: scalar.cpp  vector.cpp
bfv_backend/distances_5x5_partially/: scalar.cpp  vector.cpp
bfv_backend/distances_5x5_un/: scalar.cpp  vector.cpp
bfv_backend/dot_product_10x10_fully/: scalar.cpp  vector.cpp
bfv_backend/dot_product_10x10_partially/: scalar.cpp  vector.cpp
bfv_backend/dot_product_10x10_un/: scalar.cpp  vector.cpp
bfv_backend/dot_product_3x3_fully/: scalar.cpp  vector.cpp
bfv_backend/dot_product_3x3_partially/: scalar.cpp  vector.cpp
bfv_backend/dot_product_3x3_un/: scalar.cpp  vector.cpp
bfv_backend/dot_product_6x6_fully/: scalar.cpp  vector.cpp
bfv_backend/dot_product_6x6_partially/: scalar.cpp  vector.cpp
bfv_backend/dot_product_6x6_un/: scalar.cpp  vector.cpp
bfv_backend/matmul_2x2_fully/: scalar.cpp
bfv_backend/matmul_2x2_partially/: scalar.cpp  vector.cpp
bfv_backend/matmul_2x2_un/: scalar.cpp  vector.cpp
bfv_backend/matmul_3x3_case1/: scalar.cpp  vector.cpp
bfv_backend/matmul_3x3_case2/: scalar.cpp  vector.cpp
bfv_backend/matmul_3x3_case3/: scalar.cpp
bfv_backend/matmul_3x3_case4/: scalar.cpp
bfv_backend/matmul_3x3_fully/: scalar.cpp  vector.cpp
bfv_backend/matmul_3x3_partially/: scalar.cpp  vector.cpp
bfv_backend/matmul_3x3_un/: scalar.cpp  vector.cpp
bfv_backend/max_value/: scalar.cpp  vector.cpp
bfv_backend/max_value_packed_fully/: scalar.cpp  vector.cpp
bfv_backend/max_value_packed_partially/: scalar.cpp  vector.cpp
bfv_backend/max_value_packed_un/: scalar.cpp  vector.cpp
bfv_backend/newData/: conv_4x2_fully.csv  conv_4x2_partially.csv  conv_4x2_un.csv  conv_5x3_fully.csv  conv_5x3_partially.csv  conv_5x3_un.csv  decision_tree.csv  decision_tree_packed_fully.csv  decision_tree_packed_partially.csv  decision_tree_packed_un.csv  distances_3x3_fully.csv  distances_3x3_partially.csv  distances_3x3_un.csv  distances_4x4_fully.csv  distances_4x4_partially.csv  distances_4x4_un.csv  distances_5x5_fully.csv  distances_5x5_partially.csv  distances_5x5_un.csv  dot_product_10x10_fully.csv  dot_product_10x10_partially.csv  dot_product_10x10_un.csv  dot_product_3x3_fully.csv  dot_product_3x3_partially.csv  dot_product_3x3_un.csv  dot_product_6x6_fully.csv  dot_product_6x6_partially.csv  dot_product_6x6_un.csv  matmul_2x2_fully.csv  matmul_2x2_partially.csv  matmul_2x2_un.csv  matmul_3x3_case1.csv  matmul_3x3_case2.csv  matmul_3x3_case3.csv  matmul_3x3_case4.csv  matmul_3x3_case5.csv  matmul_3x3_fully.csv  matmul_3x3_partially.csv  matmul_3x3_un.csv  max_value.csv  (+33 more)
bfv_backend/newTrees/: collectSpeedup.py  tree_100-100-10_1.csv  tree_100-100-10_2.csv  tree_100-100-10_3.csv  tree_100-100-10_4.csv  tree_100-100-10_5.csv  tree_100-100-5_1.csv  tree_100-100-5_2.csv  tree_100-100-5_3.csv  tree_100-100-5_4.csv  tree_100-100-5_5.csv  tree_100-50-10_1.csv  tree_100-50-10_2.csv  tree_100-50-10_3.csv  tree_100-50-10_4.csv  tree_100-50-10_5.csv  tree_100-50-5_1.csv  tree_100-50-5_2.csv  tree_100-50-5_3.csv  tree_100-50-5_4.csv  tree_100-50-5_5.csv  tree_50-50-10_1.csv  tree_50-50-10_2.csv  tree_50-50-10_3.csv  tree_50-50-10_4.csv  tree_50-50-10_5.csv  tree_50-50-5_1.csv  tree_50-50-5_2.csv  tree_50-50-5_3.csv  tree_50-50-5_4.csv  tree_50-50-5_5.csv
bfv_backend/objectiveFunctionData/: conv_4x2_fully.csv  conv_4x2_partially.csv  conv_4x2_un.csv  conv_5x3_fully.csv  conv_5x3_partially.csv  conv_5x3_un.csv  distances_5x5_fully.csv  distances_5x5_partially.csv  distances_5x5_un.csv  dot_product_10x10_fully.csv  dot_product_10x10_partially.csv  dot_product_10x10_un.csv  dot_product_3x3_fully.csv  dot_product_3x3_partially.csv  dot_product_3x3_un.csv  dot_product_6x6_fully.csv  dot_product_6x6_partially.csv  dot_product_6x6_un.csv
bfv_backend/oldData/: decision_tree.csv  distances_3x3_fully.csv  distances_3x3_partially.csv  distances_4x4_fully.csv  distances_4x4_partially.csv  distances_5x5_fully.csv  distances_5x5_partially.csv  matmul_2x2_fully.csv  matmul_2x2_partially.csv
bfv_backend/tree_100-100-10_1/: scalar.cpp  vector.cpp
bfv_backend/tree_100-100-10_2/: scalar.cpp  vector.cpp
bfv_backend/tree_100-100-10_3/: scalar.cpp  vector.cpp
bfv_backend/tree_100-100-10_4/: scalar.cpp  vector.cpp
bfv_backend/tree_100-100-10_5/: scalar.cpp  vector.cpp
bfv_backend/tree_100-100-3_2/: vector.cpp
bfv_backend/tree_100-100-3_3/: scalar.cpp
bfv_backend/tree_100-50-3_1/: scalar.cpp
(+848 files in other folders)
