[metadata]
name = coyote
version = 0.1
author = Raghav Malik
author_email = malik22@purdue.edu
description = Compiler and runtime for FHE Coyote

[options]
packages = find:
python_requires = >=3.10
install_requires=
	z3-solver
	numpy
	networkx

[options.entry_points]
	console_scripts =
		coyotecc=coyote_compile:main
