[metadata]
name = coyote
version = 0.1
author = Raghav Malik
author_email = malik22@purdue.edu
description = Compiler and runtime for FHE Coyote

[options]
packages = find:
include-package-data=True
python_requires = >=3.10
install_requires=
	z3-solver
	numpy
	networkx
scripts=
	coyote_compile.py
	compile_to_bfv.py
[options.entry_points]
	console_scripts =
		coyotecc=coyote_compile:main
[options.package_data]
coyote=py.typed

[tool.ruff]
line-length = 140
